Generic UI table component refactoring. Also moving some classes in another package and going back to simple security.

--- a/src/main/webapp/WEB-INF/templates/parishioners/copy-form.html
+++ b/src/main/webapp/WEB-INF/templates/parishioners/copy-form.html
@@ -1,5 +1,5 @@
 <div id="parishioner-copy-form">
-	 <form class="clearfix" action="list.html" th:object="${parishioner}" th:action="@{/parishioners/create}" method="post">
+	 <form class="clearfix" action="list1.html" th:object="${parishioner}" th:action="@{/parishioners/create}" method="post">
         
             <h1>Add new member from template</h1>
 
