--- a/src/main/webapp/WEB-INF/templates/parishioners/create.html
+++ b/src/main/webapp/WEB-INF/templates/parishioners/create.html
@@ -20,7 +20,7 @@
 <body>
 	<header th:substituteby="index::header"> </header>
 	<div id="container">
-		<form id="create-parishioner" class="clearfix" action="list.html"
+		<form id="create-parishioner" class="clearfix" action="list1.html"
 			th:object="${parishioner}" th:action="@{/parishioners/create}"
 			method="post">
 
